--- a/style.css
+++ b/style.css
@@ -1,100 +1,225 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
-:root{
-    --Dark-Gray : hsl(0, 0%, 63%);
-    --Black : hsl(0, 0%, 0%);
-    --White : hsl(0, 0%, 100%);
-    --Very-Dark-Gray: hsl(0, 0%, 27%);
+:root {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500, 600, 700;
+  font-size: 15px;
+  --Dark-Gray: hsl(0, 0%, 63%);
+  --Black: hsl(0, 0%, 0%);
+  --White: hsl(0, 0%, 100%);
+  --Very-Dark-Gray: hsl(0, 0%, 27%);
 }
-html{
-    font-family: "Roboto", sans-serif;
-    font-weight: 500,600,700;
-    font-size: 12px;
+a {
+  text-decoration: none;
+  color: var(--White);  
 }
-a{
-    text-decoration: none;
-    color: white;
+a:hover{
+  text-decoration: underline;
 }
-body{
-    max-width: 1440px;
-    margin: auto;
-    
+p {
+  font-size: 15px;
+  color: var(--Dark-Gray);
 }
-.header-infomation{
-    display: flex;
-    flex-direction: row;
+h1 {
+  font-size: 40px;
+  color: var(--Very-Dark-Gray);
 }
-header{
-    display: flex;
-    flex-direction: column;
-    position: relative;
+img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.header__nav{
-    position: absolute;
-    left: 50px;
-    top: 50px;
-    display: flex;
-    align-items: center;
+.container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
-.header__logo{
-    margin-right: 10px;
-    width: 100px;
+header {
+  position: absolute;
+  left: 8%;
+  top: 8%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.header__menu{
-    margin: 0px 20px;
-    font-size: 20px;
+header img {
+  width: 100px;
+  margin-right: 20px;
 }
-.header__img img{ 
-    overflow: hidden;
+.navbar-menu {
+  display: flex;
+  flex-direction: row;
+  font-size: 20px;
+  gap: 20px;
 }
-.info{
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 130px 80px;
+.content-top,
+.content-bottom {
+  display: flex;
+  flex-direction: row;
 }
-.info__headline{
-    color: var(--Black);
-    font-size: 45px;
+.content-top {
+  justify-content: flex-start;
 }
-.info__para {
-    color: var(--Dark-Gray);
-    font-size: 15px;
+.content-top__bpic {
+  width: 60vw;
 }
-.info__shop-button-cursor{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.select-state-mobile {
+  display: none;
 }
-.info__button, .footer__headline{
-    color: var(--Dark-Gray);
-    font-size: 18px;
-    text-transform: uppercase;
-    letter-spacing: 5px;
+.content-top__info {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 7rem 10rem;
+  height: 100%;
+  gap: 40px;
 }
-.info__cursor {
-    margin-inline: 10px;
+.select-state{
+  position: absolute;
+  display: flex;
+  background-color: black;
+  width: 150px;
+  height: 75px;
+  left: 0px;
+  bottom: 0px;
 }
-.footer{
-    display: flex;
-    flex-direction: row;
+.state-up img,
+.state-down img{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5rem;
+  width: 75px;
 }
-.footer__row-2{
-    flex-direction: column;
-    padding: 55px 40px;
+.content-top__link {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  letter-spacing: 1ch;
+  font-size: 1rem;
+  color: var(--Dark-Gray);
+  gap: 15px;
 }
-.footer__headline{
-    color: var(--Black);
-    padding-bottom: 25px;
+.content-bottom {
+  display: flex;
+  height: 100%;
 }
-.footer__para{
-    color: var(--Dark-Gray);
-    font-size: 15px;
+.content-bottom-left,
+.content-bottom-rigth {
+  display: flex;
+  width: 100%;
+
+}
+.content-bottom__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+  padding: 0.5rem 4rem;
+  flex-grow: 1.2;
+}
+.menu-btn{
+  display: none;
 }
 
+
+@media (max-width: 500px) {
+  .content-top__bpic {
+    width: 100%;
+  }
+  .content-top,
+  .content-bottom {
+    flex-direction: column;
+  }
+  .header-img{
+    position: absolute;
+    display: flex;
+    z-index: 5;
+    left: 140px;
+    top: 5px;
+  }
+  .navbar-menu{
+    display: none;
+  }
+  .select-state {
+    display: none;
+  }
+  .content-top__info {
+    align-items: flex-start;
+    justify-content: center;
+    padding: 2rem 3rem;
+    height: 100%;
+    gap: 40px;
+  }
+  .content-bottom img {
+    width: 100%;
+  }
+  .content-bottom__info {
+    gap: 20px;
+    padding: 2rem 3rem;
+  }
+  .content-top-left {
+    position: relative;
+  }
+  .select-state-mobile {
+    position: absolute;
+    display: flex;
+    background-color: black;
+    width: 100px;
+    height: 50px;
+    right: 0px;
+    bottom: 0px;
+  }
+  .state-up-mobile,
+  .state-down-mobile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    width: 100px;
+  }
+  .menu-btn{
+    display: flex;
+  }
+  .menu-btn > img{
+    width: 35px;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    height: 0px;
+    overflow: hidden;
+    border-radius: 8px;
+    background-color: white;
+    color:white;
+    position: absolute;
+    gap: 8px;
+    top: 0.8rem;
+    left: 0.5rem;
+  }
+  .menu a{
+    color: black;
+  }
+  
+  .menu-state {
+    display: none;
+  }
+  label {
+    position: relative;
+  }
+  
+  label .menu-state:checked + .menu {
+    /* display: grid; */
+    height: fit-content;
+    padding: 16px;
+}
+}
